tests/ivg/invalid/invalid_star_separator.ivg
format IVG-3
// space-separated star for IVG-3
STAR 10,10 5 5
